@@ -1,5 +1,16 @@
 2017-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/arm/arm-ifunc.h: New file.
+	* sysdeps/arm/armv7/multiarch/ifunc-memcpy.h: Likewise.
+	* sysdeps/arm/armv7/multiarch/memcpy.c: Likewise.
+	* sysdeps/arm/armv7/multiarch/memcpy_arm.S: Likewise.
+	* sysdeps/arm/armv7/multiarch/rtld-memcpy.S: Likewise.
+	* sysdeps/arm/armv7/multiarch/Makefile [$(subdir) = string]
+	(sysdep_routines): Add memcpy_arm.
+	* sysdeps/arm/armv7/multiarch/memcpy.S: Remove file.
+
+2017-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
+
 	* sysdeps/unix/sysv/linux/spawni.c (__spawnix): Use 0 instead of
 	WNOHANG in waitpid call.
 
